kustomize/arr-stack/sonarr/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
spec:
  externalTrafficPolicy: Local
  loadBalancerIP: 192.168.253.51
  selector:
    app: sonarr
  type: LoadBalancer
  ports:
    - port: 8989
      targetPort: sonarr
