kustomize/arr-stack/sonarr/sonarr-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`series-k8s.vinicima.com`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
      middlewares:
        - name: body-size-50m
          namespace: traefik
  tls:
    secretName: vinicima-com-tls
